# AwesomeEngine

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  launch_vs_generator.bat
AwesomeEditor/: CMakeLists.txt  config.lua
AwesomeEditor/assets/glTF/BoomBox/: BoomBox.gltf
AwesomeEditor/assets/scenes/: scene1.lua  scene2.lua
AwesomeEditor/assets/scripts/: avg_frameTime_txt_behaviour.lua  awesomeTrigger.lua  collision_sound.lua  door_behaviour.lua  event_test.lua  frameCount_txt_behaviour.lua  frameTime_txt_behaviour.lua  light.lua  mesh1_behaviour.lua  mesh2_behaviour.lua  mesh3_behaviour.lua  mesh4_behaviour.lua  note_switch.lua  note_switch_root.lua  player.lua  radio_behaviour.lua  sound.lua  wreckingTrigger.lua
AwesomeEditor/assets/scripts/bak/: camera.lua  physics.lua
AwesomeEditor/assets/skybox/Spires/: negy.tga  posy.tga
AwesomeEditor/assets/skybox/mp_midnight/: mp_midnight.shader  posy.tga
AwesomeEditor/assets/sounds/: Wwise_IDs.h
AwesomeEditor/assetsEditor/style/: AwesomeQStyle.qss
AwesomeEditor/include/Editor/Components/: Camera.hpp  Camera.inl
AwesomeEditor/include/Editor/Core/: ActorView.hpp  AssetsView.hpp  ComponentView.hpp  ComponentView.inl  EditorApplication.hpp  EditorApplication.inl  FolderView.hpp  GameView.hpp  Inspector.hpp  Material.hpp  Material.inl  Window.hpp  Windowbar.hpp
AwesomeEditor/include/Editor/Layouts/: ActorLayout.hpp  BoolLayout.hpp  ColorLayout.hpp  ComponentLayout.hpp  DropDownMenu.hpp  FloatLayout.hpp  IntLayout.hpp  PhysicalComponentLayout.hpp  RefLayout.hpp  TextLayout.hpp  TransformLayout.hpp  UIntLayout.hpp  UniformTransformLayout.hpp  Vector3Layout.hpp
AwesomeEditor/include/Editor/Widgets/: BoxColliderWidget.hpp  CameraWidget.hpp  CapsuleColliderWidget.hpp  ComponentWidget.hpp  DropWidget.hpp  LightWidget.hpp  MaterialWidget.hpp  MeshRendererWidget.hpp  PlaneColliderWidget.hpp  RigidbodyWidget.hpp  ScriptWidget.hpp  SoundEmitterWidget.hpp  SoundListenerWidget.hpp  SphereColliderWidget.hpp  Text2DWidget.hpp
AwesomeEditor/src/: main.cpp
AwesomeEditor/src/Editor/Core/: ActorView.cpp  AssetsView.cpp  ComponentView.cpp  EditorApplication.cpp  FolderView.cpp  GameView.cpp  Inspector.cpp  Material.cpp  Window.cpp  Windowbar.cpp
AwesomeEditor/src/Editor/Layouts/: ActorLayout.cpp  BoolLayout.cpp  ColorLayout.cpp  ComponentLayout.cpp  DropDownMenu.cpp  FloatLayout.cpp  IntLayout.cpp  PhysicalComponentLayout.cpp  RefLayout.cpp  TextLayout.cpp  TransformLayout.cpp  UIntLayout.cpp  UniformTransformLayout.cpp  Vector3Layout.cpp
AwesomeEditor/src/Editor/Widgets/: BoxColliderWidget.cpp  CameraWidget.cpp  CapsuleColliderWidget.cpp  ComponentWidget.cpp  DropWidget.cpp  LightWidget.cpp  MaterialWidget.cpp  MeshRendererWidget.cpp  PlaneColliderWidget.cpp  RigidbodyWidget.cpp  ScriptWidget.cpp  SoundEmitterWidget.cpp  SoundListenerWidget.cpp  SphereColliderWidget.cpp  Text2DWidget.cpp
AwesomeEngine/: CMakeLists.txt  awesome-doxygen.config
AwesomeEngine/examples/FileSystem/: CMakeLists.txt  main.cpp
AwesomeEngine/examples/ProjectTest/: CMakeLists.txt  imgui.ini  main.cpp  vk_layer_settings.txt
AwesomeEngine/examples/RendererTest/: CMakeLists.txt  imgui.ini  main.cpp
AwesomeEngine/include/Awesome/: Core.hpp  Maths.hpp  Physics.hpp  Renderer.hpp  SDK.hpp  Windowing.hpp
AwesomeEngine/include/Awesome/Core/: Algorithm.hpp  Algorithm.inl  Chrono.hpp  Chrono.inl  Color.hpp  Color.inl  Config.hpp  Debug.hpp  Delegate.hpp  Delegate.inl  File.hpp  File.inl  Hex.hpp  Initializer.hpp  Initializer.inl  Macro.hpp  MemoryPool.hpp  MemoryPool.inl  Meta.hpp  NonCopyable.hpp  PermutableDoublet.hpp  PermutableDoublet.inl  PermutableTriplet.hpp  PermutableTriplet.inl  RRID.hpp  Tools.hpp  Tools.inl  TypeInfo.hpp  Types.hpp  VectorView.hpp  VectorView.inl
AwesomeEngine/include/Awesome/Core/Graph/: GraphNodeTemplate.hpp  GraphNodeTemplate.inl  IdentifiedNodeTemplate.hpp  IdentifiedNodeTemplate.inl  NamedNodeTemplate.hpp  (+3 more)
AwesomeEngine/include/Awesome/Lua/: Enums.hpp  LuaHelper.hpp  LuaHelper.inl  Pushable.hpp  Pushable.inl
AwesomeEngine/include/Awesome/Maths/: Algorithm.hpp  Algorithm.inl  Config.hpp  EquationTerm.hpp  EquationTerm.inl  LinearEquation.hpp  LinearEquation.inl  Matrix3.hpp  Matrix3.inl  Matrix3x4.hpp  Matrix3x4.inl  Matrix4.hpp  Matrix4.inl  Plane.hpp  Plane.inl  Quaternion.hpp  Quaternion.inl  Ray.hpp  Ray.inl  Rotation.inl  Transform.hpp  Transform.inl  TransformBase.hpp  TransformBase.inl  UniformTransform.hpp  UniformTransform.inl  Variable.hpp  Variable.inl  Vector2.hpp  Vector2.inl  Vector3.hpp  Vector3.inl
AwesomeEngine/include/Awesome/Physics/: Config.hpp  Material.hpp  Material.inl  RaycastHit.hpp  RaycastHit.inl  TolerancesScale.hpp
AwesomeEngine/include/Awesome/Renderer/: Config.hpp  FramebufferInfo.hpp  FramebufferInfo.inl  Prerequisites.hpp  RenderPassInfo.hpp  RenderPassInfo.inl  RenderQueue.hpp  RenderingResources.hpp
AwesomeEngine/include/Awesome/SDK/: BaseApplication.hpp  BaseApplication.inl  Config.hpp  EngineRRID.hpp  EngineRRID.inl  RaycastInfo.hpp  RaycastInfo.inl  ThreadManager.hpp  ThreadManager.inl  Time.hpp  Time.inl  WindowApplication.hpp  WindowApplication.inl
AwesomeEngine/include/Awesome/Sound/: CMakeLists.txt  Sound.hpp  Sound.inl
AwesomeEngine/include/Awesome/Windowing/: Config.hpp  Enums.hpp  Window.hpp  Window.inl
AwesomeEngine/src/Awesome/Core/: CMakeLists.txt  Color.cpp  Hex.cpp  MemoryPool.cpp
AwesomeEngine/src/Awesome/Maths/: CMakeLists.txt  Matrix3.cpp  Matrix3x4.cpp  Matrix4.cpp  Quaternion.cpp  Ray.cpp  Transform.cpp  UniformTransform.cpp  Vector2.cpp  Vector3.cpp
AwesomeEngine/src/Awesome/Physics/: CMakeLists.txt  Material.cpp
AwesomeEngine/src/Awesome/Renderer/: CMakeLists.txt  FramebufferInfo.cpp  RenderQueue.cpp
AwesomeEngine/src/Awesome/SDK/: CMakeLists.txt  ThreadManager.cpp
AwesomeEngine/src/Awesome/Windowing/: CMakeLists.txt  Window.cpp
AwesomeEngine/unitTests/MathsUnitTests/: MathsUnitTests.vcxproj  MathsUnitTests.vcxproj.filters  Matrix3UnitTests.cpp  Matrix4UnitTests.cpp  QuaternionUnitTests.cpp  Vector2UnitTests.cpp  Vector3UnitTests.cpp
(+389 files in other folders)
